--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,5 +1,6 @@
 <div class="topic-index-wrapper">
   <div class ="container">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <% @topics.each do |topic| %>
     <div class ="row">
       <div class="col-md-6 col-md-offset-3">
@@ -8,7 +9,16 @@
             <%= topic.user.name %>
           </h2>
           <%= image_tag topic.image.url %>
+          
+        <% if !topic.favorite_users.include?(current_user) %>
+          <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
           <%= image_tag 'icons/heart-black.png',class:'topic-index-icon' %>
+          <% end %>
+          <% else %>
+          <%= image_tag 'icons/kohacu.com_001228_20180528-300x300.png',class:'topic-index-icon' %>
+        <% end %>
+          
+          
           <%= image_tag 'icons/comment.png',class:'topic-index-icon' %>
           <p class="topic-text">
             <%= topic.description %>
