--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -19,7 +19,7 @@
         <% end %>
         <%= topic.favorites.count %>
 
-        <%= link_to pages_comment_path(topic_id: topic.id), method: :get do %>
+        <%= link_to new_comment_path(topic_id: topic.id), method: :get do %>
           <%= image_tag 'icons/comment.png',class:'topic-index-icon' %>
         <% end %>
           
