コメントページの追加

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,1 +1,9 @@
-<h1>hello</h1>
+<div class="top-hero-wrapper text-center">
+ <div class="takasa_tyousei">
+   <h1 class="text-white">自由にコメントしてください💛</h1>
+ </div>
+    <form action="" method="post">
+        <P><input type="text" name="name" size="70px"></P>
+        <p><input type="button" value="送信する" id="button2" size="15px"></p>
+    </form>
+</div>
