helperページに内容を移動

--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,4 +1,4 @@
-<div class="tiouc-index-wrapper">
+<div class="topic-index-wrapper">
   <div class="container">
     <% @favorite_topics.each do |topic| %>
     <div class="row">
