--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -10,14 +10,15 @@
           </h2>
           <%= image_tag topic.image.url %>
           
-        <% if !topic.favorite_users.include?(current_user)  %>
+        <% if favorited?(topic) %>
           <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
             <%= image_tag 'icons/heart-black.png',class:'topic-index-icon' %>
           <% end %>
         <% else %>
           <%= image_tag 'icons/kohacu.com_001228_20180528-300x300.png',class:'topic-index-icon' %>
         <% end %>
-        <%= topic.favorites.count %>
+        
+        <%= topic_favorite_count(topic)%>
 
         <%= link_to new_comment_path(topic_id: topic.id), method: :get do %>
           <%= image_tag 'icons/comment.png',class:'topic-index-icon' %>
