--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -17,17 +17,12 @@
         <% else %>
           <%= image_tag 'icons/kohacu.com_001228_20180528-300x300.png',class:'topic-index-icon' %>
         <% end %>
-        
-        <%= topic_favorite_count(topic)%>
-
-        <%= link_to new_comment_path(topic_id: topic.id), method: :get do %>
-          <%= image_tag 'icons/comment.png',class:'topic-index-icon' %>
-        <% end %>
+          <%= topic.favorites.count %>
           
-         <p class="topic-text"><%= topic.description %></p>
-         
-         
-         
+          <%= image_tag 'icons/comment.png',class:'topic-index-icon' %>
+            <p class="topic-text">
+              <%= topic.description %>
+            </p>
         </div>
       </div>
     </div>
