--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,31 +1,34 @@
 <div class="topic-index-wrapper">
-  <div class ="container">
-    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-    <% @topics.each do |topic| %>
-    <div class ="row">
-      <div class="col-md-6 col-md-offset-3">
-        <div class="topic-index-single">
-          <h2 class="topic-author">
-            <%= topic.user.name %>
-          </h2>
+   <div class ="container">
+     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+       <% @topics.each do |topic| %>
+       <div class ="row">
+         <div class="col-md-6 col-md-offset-3">
+           <div class="topic-index-single">
+             <h2 class="topic-author">
+               <%= topic.user.name %>
+             </h2>
           <%= image_tag topic.image.url %>
           
-        <% if favorited?(topic) %>
-          <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
-            <%= image_tag 'icons/heart-black.png',class:'topic-index-icon' %>
-          <% end %>
-        <% else %>
-          <%= image_tag 'icons/kohacu.com_001228_20180528-300x300.png',class:'topic-index-icon' %>
-        <% end %>
-          <%= topic.favorites.count %>
           
-          <%= image_tag 'icons/comment.png',class:'topic-index-icon' %>
-            <p class="topic-text">
-              <%= topic.description %>
-            </p>
-        </div>
-      </div>
-    </div>
-    <% end %>
- </div>
+          
+        <% if favorited?(topic) %>
+            <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
+                <%= image_tag 'icons/heart-black.png',class:'topic-index-icon' %>
+            <% end %>
+        <% else %>
+                <%= image_tag 'icons/kohacu.com_001228_20180528-300x300.png',class:'topic-index-icon' %>
+        <% end %>
+        <%= topic.favorites.count %>
+          
+            <%= link_to new_comment_path do %>
+                 <%= image_tag 'icons/comment.png',class:'topic-index-icon' %>
+            <% end %>
+        <p class="topic-text">
+        </p>
+       </div>
+     </div>
+   </div>
+   <% end %>
+  </div>
 </div>
