--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -19,7 +19,9 @@
         <% end %>
           <%= topic.favorites.count %>
           
-          <%= image_tag 'icons/comment.png',class:'topic-index-icon' %>
+          <%= link_to new_comment_path do %>
+            <%= image_tag 'icons/comment.png',class:'topic-index-icon' %>
+          <% end %>
             <p class="topic-text">
               <%= topic.description %>
             </p>
