--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -22,6 +22,7 @@
           <%= link_to new_comment_path(topic_id: topic.id) do %>
             <%= image_tag 'icons/comment.png',class:'topic-index-icon' %>
           <% end %>
+          <h2>コメント</h2>
           <% topic.comments.each do |com|%>
             <p class="topic-text">
               <%= com.comment %>
