--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -19,10 +19,15 @@
         <% end %>
           <%= topic.favorites.count %>
           
-          <%= image_tag 'icons/comment.png',class:'topic-index-icon' %>
+          <%= link_to new_comment_path(topic_id: topic.id) do %>
+            <%= image_tag 'icons/comment.png',class:'topic-index-icon' %>
+          <% end %>
+          <h2>コメント</h2>
+          <% topic.comments.each do |topic_comment|%>
             <p class="topic-text">
-              <%= topic.description %>
+              <%= topic_comment.comment %>
             </p>
+            <% end %>
         </div>
       </div>
     </div>
