--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,6 +4,7 @@
     <h2 class="text-white">Pictgram is a service that you can post photos.</h2>
     <div class="row">
       <div class="col-md-offset-3 col-md-3">
+        <p>更新実験用</p>
         <%= link_to 'Sign up',new_user_path,class:'btn btn-block btn-white'%>
       </div>
       <div class="col-md-3">
